# ArduComm

./: .gitignore  Protocol.md  README.md
arduino/: README.md  install_arduino_libraries
arduino/ArduComm/: ArduComm.cpp  ArduComm.h  keywords.txt  library.properties
arduino/ArduComm/examples/ack_response_test/: ack_response_test.ino
arduino/ArduComm/examples/bidirectional_test/: bidirectional_test.ino
arduino/ArduComm/examples/callback_example/: callback_example.ino
arduino/ArduComm/examples/complex_type_test/: complex_type_test.ino
arduino/ArduComm/examples/custom_buffer_size/: custom_buffer_size.ino
arduino/ArduComm/examples/custom_type/: custom_type.ino  odometry.h  odometry.ino
arduino/ArduComm/examples/empty_import/: empty_import.ino
arduino/ArduComm/src/: ArduComm.cpp  ArduComm.h
host/: README.md  arducomm.py  arducomm_test.py  arduparser.py  fast_test.py  serialization.py  test_arducomm.py  test_arduino_parser.py  test_arduino_serialization.py  test_fast.py  test_input_buffer.py  test_read_serial.py
host/arducomm/: README.md  pyproject.toml
host/arducomm/examples/: callback_example.py  custom_type.py  led_switch.py
host/arducomm/src/arducomm/: __init__.py  arducomm.py
host/arducomm/src/arducomm/serialization/: __init__.py  serialization.py
host/arducomm/src/arducomm/types/: __init__.py  float_array.py  imu.py  pose.py  pose2d.py  quaternion.py  vector2.py  vector3.py
host/arducomm/test/: test_arducomm.py  test_arduino_parser.py  test_arduino_serialization.py  test_checksum.py  test_fast.py  test_input_buffer.py  test_read_serial.py
(+25 files in other folders)
